--- a/src/app/viewer.html
+++ b/src/app/viewer.html
@@ -1,4 +1,8 @@
 <div>
     <h3>{{$route.meta}}</h3>
     <m-dynamic-template :template="tag"></m-dynamic-template>
+    <br>
+    <m-link url="/m-button" is-external-url="true" is-without-visit="true">
+        <span slot="icon-left">></span>test
+    </m-link>
 </div>
