--- a/src/components/buttons/button.html
+++ b/src/components/buttons/button.html
@@ -1,1 +1,21 @@
-<button @click='highlight'>click me!</button>
+<button :class="[ componentName,
+                {'is-primary': type!='secondary',
+                'is-secondary': type=='secondary',
+                'is-waiting': isWaiting,
+                'is-disabled': isDisabled},
+                addClass ]"
+        v-m-ripple-effect="rippleEffectIsActive"
+        :disabled="isWaiting || isDisabled">
+    <span :class="[ componentName + '__icon', 'is-left']" v-if="hasIconeLeft">
+        <slot name="icon-left"></slot>
+    </span>
+    <span :class="[ componentName + '__text']">
+        <slot>{{ componentName }}</slot>
+        <span :class="[ componentName + '__more-info' ]" v-if="hasMoreInfo">
+            <slot name="more-info"></slot>
+        </span>
+    </span>
+    <span :class="[ componentName + '__icon', 'is-right']" v-if="hasIconeRight">
+        <slot name="icon-right"></slot>
+    </span>
+</button>
