Mise à jour des composants
m-button
m-link
m-liste-bullet
m-text-icon

--- a/src/components/button/button.html
+++ b/src/components/button/button.html
@@ -2,8 +2,7 @@
                 {'is-primary': type!='secondary',
                 'is-secondary': type=='secondary',
                 'is-waiting': isWaiting,
-                'is-disabled': isDisabled},
-                addClass ]"
+                'is-disabled': isDisabled} ]"
         v-m-ripple-effect="rippleEffectIsActive"
         :disabled="isWaiting || isDisabled">
     <span :class="[ componentName + '__icon', 'is-left']" v-if="hasIconeLeft">
