Moved stylelint config file and formatted all scss

--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,28 +1,21 @@
-
 @import '../../styles/abstracts/variables';
-
 
 .m-link {
     position: relative;
-
     font-weight: $m-font-weight--bold;
-
     color: $m-color--primary;
     text-decoration: none;
     padding-bottom: 2px;
 
     &::after {
-        transition: width .3s ease;
+        transition: width 0.3s ease;
         position: absolute;
         right: 0;
         bottom: 0;
-
         content: '';
-
-        width: 0px;
+        width: 0;
         height: 1px;
         background: $m-color--primary;
-
     }
 
     &:not(.is-without-visit) {
@@ -34,6 +27,7 @@
     &:not(:active) {
         &:hover {
             color: $m-color--primary--light;
+
             &::after {
                 left: 0;
                 width: 100%;
@@ -42,9 +36,9 @@
         }
     }
 
-
     &:active {
         color: $m-color--primary--dark;
+
         &::after {
             background: $m-color--primary--dark;
         }
@@ -62,8 +56,8 @@
     &.is-left {
         margin-right: $m-margin--s;
     }
-    &.is-right{
+
+    &.is-right {
         margin-left: $m-margin--s;
     }
 }
-
