--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -65,10 +65,11 @@
     padding: $m-padding;
 }
 
-.m-panel__header {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr auto;
+        @media screen and (max-width: 640px) {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
     .m-panel__header__content.is-right {
         justify-self: flex-end;
