--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -4,23 +4,25 @@
                 'is-warning': type=='warning',
                 'is-error': type=='error',
                 'is-regular': mode!='reduce',
-                'is-reduce': mode=='reduce',
-                'no-icon': hasIcon=='false'} ]">
+                'is-reduce': mode=='reduce'} ]" v-if="notVisible">
     <div :class="[ componentName+ '__container',
                 {'is-regular': mode!='reduce',
                 'is-reduce': mode=='reduce'} ]">
-        <div :class="[ componentName + '__icon']" v-if="hasIcon">
-            <slot name="icon">
-                <m-icon :icon="getIcon()"></m-icon>
-            </slot>
+        <div :class="[ componentName + '__icon']" v-if="hasNoIcon">
+            <m-icon :icon="getIcon()"></m-icon>
         </div>
         <div :class="[ componentName + '__body']">
-            <slot>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas iaculis nibh eu diam pellentesque lobortis.
-                    Duis mattis vel orci at luctus. Fusce vitae eros quis diam iaculis imperdiet quis vitae sapien. Aliquam
-                    blandit commodo arcu et vehicula. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci
-                    luctus et ultrices posuere cubilia Curae.</p>
-            </slot>
+            <m-link type="button" @onClick="onClose" :class="[ componentName + '__closeButton']" v-if="showCloseButton">
+                <m-icon></m-icon>
+            </m-link>
+            <p>
+                <slot>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas iaculis nibh eu diam pellentesque lobortis. Duis mattis
+                    vel orci at luctus. Fusce vitae eros quis diam iaculis imperdiet quis vitae sapien. Aliquam blandit commodo
+                    arcu et vehicula. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+                    posuere cubilia Curae.
+                </slot>
+            </p>
         </div>
     </div>
 </div>
