--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -6,7 +6,7 @@
             <span class="m-accordion__header__icon is-left" :class="{ 'is-close': aIsOpen, 'is-large': aIconSize=='large', 'has-border': aIconStyle=='border' }" v-if="aIconPosition == 'left'">
             </span>
             <span class="m-accordion__header__tilte">
-                <slot name="title">m-accordion {{ hasRipple }}</slot>
+                <slot name="title">m-accordion</slot>
             </span>
             <span class="m-accordion__header__icon is-right" :class="{ 'is-close': aIsOpen, 'is-large': aIconSize=='large', 'has-border': aIconStyle=='border' }" v-if="aIconPosition == 'right'">
             </span>
