--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -1,18 +1,16 @@
-<div :class="[ componentName,
-                {'is-success': type=='success',
+<div class="m-message" :class="{'is-success': type=='success',
                 'is-info': type=='info',
                 'is-warning': type=='warning',
                 'is-error': type=='error',
                 'is-regular': mode!='reduce',
-                'is-reduce': mode=='reduce'} ]" v-if="notVisible">
-    <div :class="[ componentName+ '__container',
-                {'is-regular': mode!='reduce',
-                'is-reduce': mode=='reduce'} ]">
-        <div :class="[ componentName + '__icon']" v-if="hasNoIcon">
+                'is-reduce': mode=='reduce'}" v-if="notVisible">
+    <div class="m-message__container" :class="{'is-regular': mode!='reduce',
+                'is-reduce': mode=='reduce'}">
+        <div class="m-message__icon" v-if="hasNoIcon">
             <m-icon :icon="getIcon()"></m-icon>
         </div>
-        <div :class="[ componentName + '__body']">
-            <m-link type="button" @onClick="onClose" :class="[ componentName + '__closeButton']" v-if="showCloseButton">
+        <div class="m-message__body">
+            <m-link type="button" @onClick="onClose" class="m-message__closeButton" v-if="showCloseButton">
                 <m-icon></m-icon>
             </m-link>
             <p>
