i18n support at the component level

--- a/src/components/accordion-group/accordion-group.html
+++ b/src/components/accordion-group/accordion-group.html
@@ -4,8 +4,8 @@
             <slot name="title">m-accordion-group</slot>
         </span>
         <span class="m-accordion-group__header__button">
-            <m-link type="button" @onClick="openAllAccordions" v-if="!accordionsAreAllOpen">Tout ouvrir</m-link>
-            <m-link type="button" @onClick="closeAllAccordions" v-else>Tout fermer</m-link>
+            <m-link type="button" @onClick="openAllAccordions" v-if="!accordionsAreAllOpen"><m-i18n msg="m-accordion-group:open-all"></m-i18n></m-link>
+            <m-link type="button" @onClick="closeAllAccordions" v-else><m-i18n msg="m-accordion-group:close-all"></m-i18n></m-link>
         </span>
     </header>
     <div class="m-accordion-group__body">
