change props name

--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -1,5 +1,5 @@
 <div class="m-message" :class="{'is-success': type=='success',
-                'is-info': type=='info',
+                'is-information': type=='information',
                 'is-warning': type=='warning',
                 'is-error': type=='error',
                 'is-regular': mode!='reduce',
