--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -3,13 +3,13 @@
                 'is-warning': state=='warning',
                 'is-error': state=='error',
                 'is-regular': mode!='reduce',
-                'is-reduce': mode=='reduce'}" v-if="!isVisible">
+                'is-reduce': mode=='reduce'}" v-if="isVisible">
     <div class="m-message__container" :class="{'is-regular': mode!='reduce',
                 'is-reduce': mode=='reduce'}">
-        <div class="m-message__icon" v-if="!hasIcon">
+        <div class="m-message__icon" v-if="hasIcon">
             <m-icon :name="getIcon()"></m-icon>
         </div>
-        <div class="m-message__body" :class="{'have-close-button': !hasCloseButton}">
+        <div class="m-message__body" :class="{'have-close-button': hasCloseButton}">
             <m-button aspect="icon" @onClick="onClose" class="m-message__closeButton" v-if="showCloseButton">
                 <m-icon></m-icon>
             </m-button>
