--- a/src/components/step/step.scss
+++ b/src/components/step/step.scss
@@ -12,7 +12,7 @@ $m-step--badge--size: 20px;
         height: calc(100% + 1px);
         z-index: 1;
         width: 1px;
-        background-color: $m-color--grey--darker;
+        background-color: $m-color--grey--dark;
         content: "";
         left: calc((#{$m-step--icon--size} / 2) - 1px); //magic number
     }
@@ -42,7 +42,7 @@ $m-step--badge--size: 20px;
         z-index: 2;
 
         .m-step__header__icon {
-            border: 2px solid $m-color--grey--lighter;
+            border: 2px solid $m-color--grey;
             height: $m-step--icon--size;
             width: $m-step--icon--size;
             font-size: $m-step--badge--size;
