--- a/src/components/step/step.html
+++ b/src/components/step/step.html
@@ -1,22 +1,25 @@
-<div class="m-step" :class="{'is-disable': aState=='disable','is-inProgress': aState=='in-progress','is-success': aState=='success','is-warning': aState=='warning','is-error': aState=='error', 'is-open': aIsOpen, 'is-last': isLast}">
-    <header class="m-step__header" @click="openStep">
-        <div class="m-step__header__icon">
+<article class="m-step" :class="{'is-disable': aState=='disable','is-inProgress': aState=='in-progress','is-success': aState=='success','is-warning': aState=='warning','is-error': aState=='error', 'is-open': propsIsOpen, 'is-close': !propsIsOpen, 'is-last': isLast}">
+    <header class="m-step__header" @click="toggleStep">
+        <span class="m-step__header__icon">
             <m-icon :name="iconName"></m-icon>
-            <div class="m-step__header__icon__badge">
+            <span class="m-step__header__icon__badge">
                 <m-icon :name="getIcon()"></m-icon>
-            </div>
-        </div>
-        <h2 class="m-step__header__title">
+            </span>
+        </span>
+        <span class="m-step__header__title">
             <slot name="header">Lorem ipsum dolor sit amet</slot>
-        </h2>
+        </span>
     </header>
-    <div class="m-step__body" v-if="aIsOpen">
-        <slot>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas iaculis nibh eu diam pellentesque lobortis. Duis
+
+    <transition @enter="animEnter" @after-enter="animAfterEnter" @leave="animLeave">
+        <div class="m-step__body" v-if="propsIsOpen">
+            <slot>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas iaculis nibh eu diam pellentesque lobortis. Duis
             mattis vel orci at luctus. Fusce vitae eros quis diam iaculis imperdiet quis vitae sapien. Aliquam blandit commodo
             arcu et vehicula. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
             cubilia Curae; Donec vehicula condimentum elementum. Sed laoreet est eget lorem tristique condimentum. Vestibulum
             at odio orci. Duis nisl erat, aliquam non tortor et, dapibus maximus nulla. Mauris lobortis, orci nec lobortis
             faucibus, nisi justo eleifend erat, sed convallis velit mi non lacus. Pellentesque habitant morbi tristique senectus
             et netus et malesuada fames ac turpis egestas.</slot>
-    </div>
-</div>
+        </div>
+    </transition>
+</article>
