--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -1,7 +1,19 @@
-<m-popper trigger="click" :options="{placement: 'bottom'}">
-    <ul class="m-popper__popper" v-if="computedElementsCount > 0">
-        <li v-for="element in elements">{{element}}</li>
-    </ul>
-    <input type="text" slot="reference" :value="invite" />
-</m-popper>
+<div class="m-dropdown">
+    <m-popper trigger="click" :options="{placement: 'bottom'}" :close-on-content-click="true" :toggle-on-reference-click="false">
+        <ul class="m-popper__popper m-dropdown__elements" v-if="computedElementsCount > 0">
+            <li v-for="(element, index) in elements"
+                @click="selectElement($event, element)"
+                class="m-dropdown__element"
+                :class="{'m-dropdown__element--active': element === textElement}"
+                :key="index"
+                :data-index="index">
+                <span class="m-dropdown__element-text" v-once>
+                    {{ getElementListText(element) }}
+                </span>
+            </li>
+        </ul>
 
+        <input type="text" slot="reference" v-if="saisieActive" v-model="textElement" class="" />
+        <span slot="reference" v-if="!saisieActive">{{ textElement }}</span>
+    </m-popper>
+</div>
