--- a/src/components/step/step.scss
+++ b/src/components/step/step.scss
@@ -9,7 +9,7 @@ $m-step--badge--size: 20px;
 
     &::before {
         position: absolute;
-        height: calc(100% + 1px);
+        height: 100%;
         z-index: 1;
         width: 1px;
         background-color: $m-color--grey--dark;
@@ -40,6 +40,8 @@ $m-step--badge--size: 20px;
         display: flex;
         align-items: center;
         z-index: 2;
+        color: $m-color--black;
+        text-decoration: none;
 
         .m-step__header__icon {
             border: 2px solid $m-color--grey;
@@ -64,9 +66,20 @@ $m-step--badge--size: 20px;
         }
 
         .m-step__header__title {
+            &,
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6 {
+                margin: 0;
+                margin-left: $m-margin;
+                font-size: $m-font-size--h2;
+                font-weight: $m-font-weight--bold;
+            }
+
             flex: 1;
-            margin: 0;
-            margin-left: $m-margin;
             font-size: $m-font-size--h3;
         }
     }
