--- a/src/components/step/step.scss
+++ b/src/components/step/step.scss
@@ -42,6 +42,7 @@ $m-step--badge--size: 20px;
         z-index: 2;
         color: $m-color--black;
         text-decoration: none;
+        margin-bottom: $m-margin--xs;
 
         .m-step__header__icon {
             border: 2px solid $m-color--grey;
