--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -24,3 +24,22 @@
 .m-dropdown__element-link {
     cursor: pointer;
 }
+
+.m-dropdown__value {
+    position: relative;
+    transition: color .3s ease, border-color .3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 130px;
+    max-width: 250px;
+    height: 32px;
+    padding: 0 $m-padding--xs;
+    background: #fff;
+    border: 1px solid #dcdbd9;
+    text-align: left;
+    white-space: nowrap;
+    cursor: pointer;
+    color: #000;
+    width: 200px;
+}
