clean dropdown.scss file

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -27,7 +27,7 @@
 
 .m-dropdown__value {
     position: relative;
-    transition: color .3s ease, border-color .3s ease;
+    transition: color 0.3s ease, border-color 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: space-between;
