--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -1,5 +1,5 @@
-<div class="m-dropdown">
-    <ul class="m-popper__popper m-dropdown__elements" style="display: none;"><span class="m-dropdown__element-text" ref="mDropdownCalculate"></span></li></ul>
+<div class="m-dropdown" ref="mDropdown">
+    <ul class="m-popper__popper m-dropdown__elements" style="visibility: hidden;"><span class="m-dropdown__element-text" ref="mDropdownCalculate"></span></li></ul>
 
     <m-popper trigger="click" :options="{placement: 'bottom'}" :close-on-content-click="true" :toggle-on-reference-click="false">
         <ul class="m-popper__popper m-dropdown__elements"
