--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -2,7 +2,7 @@
 //  Margin
 // ======================================================================
 
-.m-margin {
+.m-u--margin {
     margin: $m-margin;
 
     &-top {
@@ -96,7 +96,7 @@
 //  Padding
 // ======================================================================
 
-.m-padding {
+.m-u--padding {
     padding: $m-padding;
 
     &-top {
@@ -190,7 +190,7 @@
 //  without margin and padding
 // ======================================================================
 
-.m-no {
+.m-u--no {
     &-margin {
         margin: 0;
 
