--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -5,7 +5,7 @@ $m-accordion--icon--l--height: 2px;
 $m-accordion--icon--height: 1px;
 $m-accordion--border--size: 2px;
 $m-accordion--color: $m-color--secondary;
-$m-accordion--color--border: $m-color--grey--light;
+$m-accordion--color--border: $m-color--grey-light;
 
 .m-accordion {
     &.m--is-regular,
@@ -96,7 +96,7 @@ $m-accordion--color--border: $m-color--grey--light;
         }
 
         &:not(.m--is-no-style) {
-            color: $m-color--black;
+            color: $m-color--text;
             text-decoration: none;
         }
 
