--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -17,7 +17,7 @@ $m-checkbox--width: 16px;
 
         .m-checkbox__label {
             flex: 1;
-            color: $m-text-color;
+            color: $m-color--text;
         }
 
         .m-checkbox__input {
@@ -31,7 +31,7 @@ $m-checkbox--width: 16px;
 
         &:hover {
             .m-checkbox__input {
-                background: $m-color--primary--lightest;
+                background: $m-color--primary-lightest;
             }
 
             .m-checkbox__label {
@@ -41,7 +41,7 @@ $m-checkbox--width: 16px;
 
         &.m--is-focus {
             .m-checkbox__input {
-                background: $m-color--primary--lightest;
+                background: $m-color--primary-lightest;
             }
 
             .m-checkbox__label {
@@ -57,8 +57,8 @@ $m-checkbox--width: 16px;
     }
 
     &.m--is-disabled {
-        border-color: $m-color--grey--light;
-        background: $m-color--grey--lighter;
+        border-color: $m-color--grey-light;
+        background: $m-color--grey-lighter;
     }
 
     &.m--is-checkbox-left {
