--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -18,7 +18,7 @@ $m-checkbox--width: 16px;
 
             &:hover {
                 .m-radio__input {
-                    background: $m-color--primary--lightest;
+                    background: $m-color--primary-lightest;
                 }
 
                 .m-radio__label {
@@ -29,7 +29,7 @@ $m-checkbox--width: 16px;
 
         .m-radio__label {
             flex: 1;
-            color: $m-text-color;
+            color: $m-color--text;
             padding-left: $m-margin--s;
         }
 
