--- a/src/styles/base/_list-bullet.scss
+++ b/src/styles/base/_list-bullet.scss
@@ -2,7 +2,7 @@
 //  List bullet
 // ======================================================================
 
-.m-list-bullet {
+.m-u--list-bullet {
     margin: $m-margin 0;
     padding: 0 0 0 $m-padding--l;
 
@@ -35,7 +35,7 @@
             width: 3px;
             height: 3px;
             border-radius: 50%;
-            background: $m-color--grey--light;
+            background: $m-color--grey-light;
         }
     }
 }
