--- a/src/components/radio-buttons/radio-buttons.scss
+++ b/src/components/radio-buttons/radio-buttons.scss
@@ -1,7 +1,7 @@
 @import 'abstracts/variables';
 $m-checkbox--width: 16px;
 
-.m-radio {
+.m-radio-buttons {
     display: inline;
     user-select: none;
     line-height: 1;
@@ -11,42 +11,43 @@ $m-checkbox--width: 16px;
     &:not(.is-disabled) {
         cursor: pointer;
 
-        .m-radio__wrap {
+        .m-radio-buttons__wrap {
             display: flex;
             align-items: center;
             cursor: pointer;
+        }
 
-            &:hover {
-                .m-radio__input {
-                    background: $m-color--primary-lightest;
-                }
+        .m-radio-buttons__wrap:hover,
+        input[type=radio]:focus ~ .m-radio-buttons__wrap {
+            .m-radio-buttons__input {
+                border-color: $m-color--primary;
+                background: $m-color--primary-lightest;
+            }
 
-                .m-radio__label {
-                    color: $m-color--primary;
-                }
+            .m-radio-buttons__label {
+                color: $m-color--primary;
             }
         }
 
-        .m-radio__label {
+        .m-radio-buttons__label {
             flex: 1;
             color: $m-color--text;
             padding-left: $m-margin--s;
         }
 
-        .m-radio__input {
+        .m-radio-buttons__input {
             border-color: $m-color--black;
             color: $m-color--black;
 
             &.m--is-checked {
                 &::before {
-                    opacity: 1;
                     visibility: visible;
+                    transform: scale(1);
                 }
             }
 
             &::before {
-                opacity: 0;
-                transition: all 0.3s ease-out;
+                transition: 0.3s transform ease-out;
                 content: '';
                 display: block;
                 width: 10px;
@@ -54,12 +55,13 @@ $m-checkbox--width: 16px;
                 background: $m-color--primary;
                 border-radius: 50%;
                 visibility: hidden;
+                transform: scale(0);
             }
         }
     }
 
     &__input {
-        transition: 0.3s background ease;
+        transition: 0.3s background ease, 0.3s bordr-color ease;
         display: inline-flex;
         align-items: center;
         justify-content: center;
