Rename table component class

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -20,7 +20,7 @@
             align-items: flex-start;
         }
 
-        .m-table__header__content.is-right {
+        .m-table__header__content.m--is-right {
             justify-self: flex-end;
         }
     }
