--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -19,7 +19,7 @@
             </li>
             <li v-if="elementsCount <= 0"
                 class="m-dropdown__list__element">
-                <span class="m-dropdown__list__element__text">Aucun résultat</span>
+                <span class="m-dropdown__list__element__text"><m-i18n i18n-key="m-dropdown:no-result" ></m-i18n></span>
             </li>
         </ul>
 
