--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -36,7 +36,7 @@ $m-accordion--color--border: $m-color--grey-light;
                 border-bottom: $m-accordion--border--size solid $m-accordion--color--border;
 
                 &-wrap {
-                    border-left: $m-border-size solid $m-accordion--color;
+                    border-left: $m-border-width--l solid $m-accordion--color;
                 }
             }
 
