--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,7 @@
 html,
 body {
     height: 100%;
-    outline-color: $m-color--primary--light;
+    outline-color: $m-color--primary-light;
 }
 
 html {
@@ -26,5 +26,5 @@ body {
 
 ::selection {
     background: $m-color--ul-yellow;
-    color: $m-color--white;
+    color: $m-color--text;
 }
