--- a/src/styles/base/_list-bullet.scss
+++ b/src/styles/base/_list-bullet.scss
@@ -29,13 +29,13 @@
 
         &::before {
             position: absolute;
-            top: 8px;
-            left: -12px;
+            top: 8px; // Magic number
+            left: -12px; // Magic number
             content: '';
             width: 3px;
             height: 3px;
             border-radius: 50%;
-            background: $m-color--grey-light;
+            background: $m-color--grey-dark;
         }
     }
 }
