--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -10,7 +10,9 @@
               :closeOnContentClick="true"
               :closeOnReferenceClick="false"
               :disabled="stateDisabled"
-              mode="dropdown">
+              mode="dropdown"
+              @show="listOpen(true)"
+              @hide="listOpen(false)">
         <ul class="m-dropdown__list"
             ref="mDropdownElements">
             <li v-for="(element, index) in elementsSortedFiltered"
