--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -20,9 +20,11 @@
                 class="m-dropdown__list__element"
                 :class="{ 'is-selected': element === propsSelectedElement }"
                 :key="index"
-                :data-index="index"
                 @click="selectElement($event, element)">
-                <span class="m-dropdown__list__element__text">{{ getElementListText(element) }}</span>
+                <a class="m-dropdown__list__element__text"
+                   :data-index="index"
+                   @keyup="keyupItem($event, index)"
+                   tabindex="0">{{ getElementListText(element) }}</a>
             </li>
             <li v-if="elementsCount <= 0"
                 class="m-dropdown__list__element">
@@ -35,7 +37,8 @@
                       :value="textElement"
                       :state="state"
                       :isEditable="isEditable"
-                      @valueChanged="textElement = $event">
+                      @valueChanged="textElement = $event"
+                      @keyup="keyupList">
                       <slot></slot>
         </m-text-field>
     </m-popper>
