Component upload-fileslist

--- a/src/components/upload-input/upload-input.html
+++ b/src/components/upload-input/upload-input.html
@@ -1,6 +1,6 @@
 <div class="m-upload-input">
     <input type="file"
-           :accept="extensionsProp"
+           :accept="extensions"
            @change="filesInput"
            :multiple="multiple" />
 </div>
