--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -1,7 +1,7 @@
 <div class="m-dropdown" ref="mDropdown" :class="{ 'm--is-disabled': disabled }">
     <ul class="m-dropdown__list m--is-hidden" aria-hidden="true">
         <li class="m-dropdown__list__element">
-            <span class="m-dropdown__list__element-text" ref="mDropdownCalculate"></span>
+            <a href="#" class="m-dropdown__list__element-text" ref="mDropdownCalculate"></a>
         </li>
     </ul>
     <m-popper :options="{ placement: 'bottom' }"
@@ -10,11 +10,30 @@
               :disabled="isDisabled"
               :open="propOpen"
               mode="dropdown"
+              dialogMode="panel"
+              :enterFn="animEnter"
+              :afterEnterFn="animAfterEnter"
+              :leaveFn="animLeave"
               @show="toggleDropdown(true)"
               @hide="toggleDropdown(false)"
-              v-if="!isScreenMaxS">
+              :paddingHeader="false"
+              :paddingBody="false">
+        <template slot="header" v-if="hasLabel && isScreenMaxS">
+            <h2 class="m-dropdown__header__label">{{ label }}</h2>
+            <div class="m-dropdown__header__research" v-if="editable">
+                <input type="text"
+                       class="m-dropdown__header__research-input"
+                       :placeholder="researchText"
+                       v-model="textElement"
+                       ref="researchInput">
+                <m-button mode="icon" iconName="default" @click="focusOnResearchInput">
+                    <m-i18n i18n-key="m-dropdown:search"></m-i18n>
+                </m-button>
+            </div>
+        </template>
         <ul class="m-dropdown__list"
-            ref="mDropdownElements">
+            ref="mDropdownElements"
+            slot="content">
             <li v-for="(element, index) in elementsSortedFiltered"
                 v-if="elementsCount > 0"
                 class="m-dropdown__list__element"
@@ -34,8 +53,11 @@
                 </span>
             </li>
         </ul>
+
+        <template slot="footer">
+            <slot name="footer"></slot>
+        </template>
         <m-text-field ref="mDropdownValue"
-                      slot="reference"
                       :label="label"
                       :value="textElement"
                       :state="propState"
@@ -47,54 +69,6 @@
                       @focus="propOpen = true">
         </m-text-field>
     </m-popper>
-    <template v-if="isScreenMaxS">
-        <m-panel-dialog v-if="propState != 'disabled'" :paddingBody="false">
-            <div slot="header" v-if="hasLabel">
-                <span v-if="hasLabel">{{ label }}</span>
-                <template v-if="editable">
-                    <m-icon name="default"></m-icon>
-                    <input type="text" v-model="textElement">
-                </template>
-                <span v-if="!editable && textElement"> : {{ textElement }}</span>
-            </div>
-            <ul class="m-dropdown__list" slot="content">
-                <li v-for="(element, index) in elementsSortedFiltered"
-                    v-if="elementsCount > 0"
-                    class="m-dropdown__list__element"
-                    :class="{ 'is-selected': element === propSelectedElement }"
-                    :key="index"
-                    @click="selectElement($event, element)">
-                    <a href="#"
-                    class="m-dropdown__list__element-text"
-                    :data-index="index"
-                    @click.prevent
-                    @keyup="keyupItem($event, index)">{{ getElementListText(element) }}</a>
-                </li>
-                <li v-if="elementsCount <= 0"
-                    class="m-dropdown__list__element">
-                    <span class="m-dropdown__list__element-text">
-                        <m-i18n i18n-key="m-dropdown:no-result"></m-i18n>
-                    </span>
-                </li>
-            </ul>
-            <m-text-field :label="label"
-                          :value="textElement"
-                          :state="propState"
-                          :editable="editable"
-                          :force-focus="propOpen"
-                          :default-text="defaultText"
-                          @valueChanged="textElement = $event"
-                          @keyup="keyupReference"
-                          @focus="propOpen = true">
-            </m-text-field>
-        </m-panel-dialog>
-        <m-text-field :label="label"
-                      :value="textElement"
-                      :state="propState"
-                      :editable="false"
-                      v-if="propState == 'disabled'">
-        </m-text-field>
-    </template>
     <m-validation-message
         :state="propState"
         :error-message="propErrorMessage"
