Add msg to inform to switch to m-select

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -1,4 +1,7 @@
 <div class="m-dropdown" ref="mDropdown" :class="{ 'm--is-disabled': disabled }">
+    <em style="display: block; margin: 10px 0 0; font-size: 20px; white-space:nowrap">********************************</em>
+    <em style="display: block; font-size: 20px; white-space:nowrap">*** USE &lt;m-select&gt; INSTEAD ***</em>
+    <em style="display: block; margin: 0 0 10px; font-size: 20px; white-space:nowrap">********************************</em>
     <ul class="m-dropdown__list m--is-hidden" aria-hidden="true">
         <li class="m-dropdown__list__element">
             <a href="#" class="m-dropdown__list__element-text" ref="mDropdownCalculate"></a>
