--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -1,7 +1,7 @@
 
 <transition>
     <router-link class="m-link"
-                 :class="{ 'm--is-unvisited': unvisited }"
+                 :class="{ 'm--is-unvisited': unvisited, 'm--no-underline': !underline, }"
                  :to="{ path: propUrl }"
                  v-if="isRouterLink">
         <span class="m-link__icon m--is-left" v-if="hasIconeLeft">
@@ -16,7 +16,7 @@
     </router-link>
     <a ref="link"
        class="m-link"
-       :class="{ 'm--is-unvisited': unvisited, 'm--is-button': isButton }"
+       :class="{ 'm--is-unvisited': unvisited, 'm--no-underline': !underline, 'm--is-button': isButton }"
        :href="propUrl"
        v-if="isLink || isExternalLink || isButton"
        @click="onClick">
