--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -13,6 +13,7 @@
         <span class="m-link__icon m--is-right" v-if="hasIconeRight">
             <slot name="icon-right"></slot>
         </span>
+        <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </router-link>
     <a ref="link"
        class="m-link"
@@ -29,5 +30,6 @@
         <span class="m-link__icon m--is-right" v-if="hasIconeRight">
             <slot name="icon-right"></slot>
         </span>
+        <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </a>
 </transition>
