Fix animation hooks on popper component and close/anim on options-menu

--- a/src/components/options-menu/options-menu.html
+++ b/src/components/options-menu/options-menu.html
@@ -1,10 +1,10 @@
-<m-popper :open="isOpen">
-    <div class="m-options-menu" slot="content">
+<m-popper :open="isOpen" @show="onShow" @hide="onHide" :enter="onEnter" :after-enter="onAfterEnter">
+    <div class="m-options-menu" slot="content" ref="menu">
         <slot>
-            <m-options-menu-item iconName="default" @click="onItemClick">Option 1</m-options-menu-item>
-            <m-options-menu-item iconName="default"></m-options-menu-item>
+            <m-options-menu-item icon-name="default" @click="onItemClick">Option 1</m-options-menu-item>
+            <m-options-menu-item icon-name="default"></m-options-menu-item>
             <m-options-menu-item>Option 3</m-options-menu-item>
         </slot>
     </div>
-    <m-button mode="icon" iconName="options">Open popup</m-button>
+    <m-button mode="icon" icon-name="options">Open popup</m-button>
 </m-popper>
