--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,21 +1,14 @@
 @import '../../styles/abstracts/variables';
 
 .m-table {
-    &__header,
-    &__body {
-        padding: $m-padding;
-    }
-
     &__header {
-        margin-right: 16px;
-        background-color: $m-color--grey-lightest;
-        padding: $m-padding;
-        display: grid;
+        display: flex;
         align-items: center;
-        grid-template-columns: 1fr auto;
+        margin-right: 16px;
+        padding: $m-padding;
+        background-color: $m-color--grey-lightest;
 
-        @media screen and (max-width: 640px) {
-            display: flex;
+        @media screen and (max-width: $m-screen--max--s) {
             flex-direction: column;
             align-items: flex-start;
         }
@@ -45,31 +38,40 @@
     }
 
     &__body {
+        padding: $m-padding $m-padding 0 $m-padding;
         table {
             width: 100%;
             border-collapse: collapse;
 
-            thead th {
-                padding: 0 $m-padding--s $m-margin--s;
-                font-weight: $m-font-weight--bold;
-                color: $m-color--black;
-                border-bottom: 2px solid $m-color--grey-lighter;
+            thead {
+                th {
+                    padding: 0 $m-padding--s $m-margin--s;
+                    font-weight: $m-font-weight--bold;
+                    color: $m-color--black;
+                    border-bottom: 2px solid $m-color--grey-lighter;
 
-                &:first-child {
-                    padding-left: 0;
-                    text-align: left;
-                }
+                    &:first-child {
+                        padding-left: 0;
+                        text-align: left;
+                    }
 
-                &:last-child {
-                    padding-right: 0;
+                    &:last-child {
+                        padding-right: 0;
+                    }
                 }
             }
 
-            tbody tr {
-                border-bottom: 1px solid $m-color--grey-lighter;
+            tbody {
+                tr {
+                    border-bottom: 1px solid $m-color--grey-lighter;
 
-                &:last-child {
-                    border-bottom: 0;
+                    &:last-child {
+                        border-bottom: 0;
+
+                        td {
+                            padding-bottom: 0;
+                        }
+                    }
                 }
 
                 td {
