--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -4,7 +4,8 @@ $m-panel--border-width: 1px;
 .m-panel {
     position: relative;
     border: $m-panel--border-width solid $m-color--grey-light;
-    display: block;
+    display: flex;
+    flex-direction: column;
     box-shadow: 0 1px 1px rgba($m-color--black, 0.05);
 
     &.m--is-primary {
@@ -41,6 +42,18 @@ $m-panel--border-width: 1px;
         border: 0;
     }
 
+    &__header,
+    &__body,
+    &__footer {
+        > :first-child {
+            margin-top: 0;
+
+            > :first-child {
+                margin-top: 0;
+            }
+        }
+    }
+
     &__header {
         display: grid;
         align-items: center;
@@ -56,7 +69,6 @@ $m-panel--border-width: 1px;
             padding: $m-padding $m-padding #{ $m-padding + $m-margin--s } $m-padding;
         }
 
-        &,
         &__content-left,
         &__content-right {
             > :first-child {
@@ -71,14 +83,23 @@ $m-panel--border-width: 1px;
         }
     }
 
-    &__body,
-    &__footer {
+    &__body {
+        flex: 1;
+
         &:not(.m--no-padding) {
             padding: 0 $m-padding #{ $m-padding + $m-margin--s } $m-padding;
+        }
+
+        &.m--has-padding-top {
+            padding-top: $m-padding;
         }
     }
 
     &__footer {
         border-top: 1px solid $m-color--grey;
+
+        &:not(.m--no-padding) {
+            padding: $m-padding;
+        }
     }
 }
