--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -21,12 +21,12 @@
             }
         }
 
-        > h1,
-        > h2,
-        > h3,
-        > h4,
-        > h5,
-        > h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             margin-top: 0;
             font-size: $m-font-size--l;
             font-weight: $m-font-weight--bold;
@@ -39,6 +39,7 @@
 
     &__body {
         padding: $m-padding $m-padding 0 $m-padding;
+
         table {
             width: 100%;
             border-collapse: collapse;
