Update colors variables

--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -33,7 +33,7 @@ $m-loading-speed: 0.7s;
         &.m--is-light {
             .m-spinner {
                 &__icon {
-                    border-color: $m-color--ul-yellow $m-color--white $m-color--white $m-color--white;
+                    border-color: $m-color--active $m-color--white $m-color--white $m-color--white;
                 }
             }
         }
@@ -49,7 +49,7 @@ $m-loading-speed: 0.7s;
         &.m--is-dark {
             .m-spinner {
                 &__icon {
-                    border-color: $m-color--ul-yellow $m-color--grey $m-color--grey $m-color--grey;
+                    border-color: $m-color--active $m-color--grey $m-color--grey $m-color--grey;
                 }
             }
         }
@@ -74,7 +74,7 @@ $m-loading-speed: 0.7s;
         height: 46px;
         background: none;
         border: 4px solid;
-        border-color: $m-color--ul-yellow $m-color--grey-light $m-color--grey-light $m-color--grey-light;
+        border-color: $m-color--active $m-color--grey-light $m-color--grey-light $m-color--grey-light;
         border-radius: 50%;
 
         &.m--is-small {
