--- a/src/components/status-list/status-list.scss
+++ b/src/components/status-list/status-list.scss
@@ -44,7 +44,7 @@ $m-status-list-line-width: 2px;
 
         &.m--is-pending {
             .m-icon {
-                color: $m-color--yellow;
+                color: $m-color--warning;
             }
         }
     }
