--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -20,30 +20,30 @@ $m-message-size: 22px;
         }
 
         &.m--is-information {
-            border: 1px solid $m-color--primary;
+            border: 1px solid $m-color--interactive;
 
             .m-message__icon {
-                background-color: $m-color--primary-lightest;
-                border-color: $m-color--primary;
-                color: $m-color--primary;
+                background-color: $m-color--interactive-lightest;
+                border-color: $m-color--interactive;
+                color: $m-color--interactive;
             }
 
             .m-message__body .m-message__close-button {
-                color: $m-color--primary;
+                color: $m-color--interactive;
             }
         }
 
         &.m--is-warning {
-            border: 1px solid $m-color--yellow;
+            border: 1px solid $m-color--warning;
 
             .m-message__icon {
-                background-color: $m-color--yellow-lightest;
-                border-color: $m-color--yellow;
-                color: $m-color--yellow;
+                background-color: $m-color--warning-lightest;
+                border-color: $m-color--warning;
+                color: $m-color--warning;
             }
 
             .m-message__body .m-message__close-button {
-                color: $m-color--yellow;
+                color: $m-color--warning;
             }
         }
 
@@ -107,13 +107,13 @@ $m-message-size: 22px;
 
         &.m--is-information {
             .m-message__wrap {
-                background-color: $m-color--primary-lightest;
+                background-color: $m-color--interactive-lightest;
             }
         }
 
         &.m--is-warning {
             .m-message__wrap {
-                background-color: $m-color--yellow-lightest;
+                background-color: $m-color--warning-lightest;
             }
         }
 
